Fix only icon mat-stroked-button alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,6 +187,10 @@ body {
     letter-spacing: normal;
   }
 
+  .planet-icon-button.mdc-button > .mat-icon {
+    margin: 0;
+  }
+
   // Fix for new MDC icon buttons being used in old style inputs.
   // May need to change after converting forms to MDC.
   .mat-form-field-suffix button .mat-icon {
